added padding-right to accordion header

--- a/OpenWGA/plugins/afw/design/scripts/css/jquery-accordion.scss
+++ b/OpenWGA/plugins/afw/design/scripts/css/jquery-accordion.scss
@@ -23,7 +23,7 @@ $minus: wga_file_url('accordion', 'acc-minus.png');
 		font-size: 100%;
 		margin-top: 0;
 		margin-bottom: 5px;
-		padding: 5px 10px;
+		padding: 5px 35px 5px 10px;
 		border: none;
 		
 		background: #efefef url($plus) no-repeat right 10px center;
