--- a/OpenWGA/plugins/cm-neo/design/scripts/css/forms.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/forms.scss
@@ -1,6 +1,6 @@
 form{
-	input[type=text].form-control, textarea.form-control{
-		padding: 5px;
+	input[type=text].form-control, textarea.form-control, a.form-control{
+		padding: 6px;
 	}
 
 	select.form-control{
