--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/edit-rtf-image.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/edit-rtf-image.tml
@@ -66,7 +66,7 @@
 				
 				<tml:[form-field] o_label="App" o_name="dbkey" o_default="{_dbkey}" o_type="select" o_optionsitem="_dbs" o_changeaction="$refresh"/>
 
-				<tml:[form-field] o_label="Dokument" o_mode="view">
+				<tml:[form-field] o_label="Dokument">
 					<tml:include ref="util:select-document" o_fieldname="container" o_default="{_container}" o_dbkey="{tmlform.dbkey}">
 						<tml:option name="changeaction"><tml:action ref="clearFilename"/></tml:option>
 					</tml:include>
