--- a/OpenWGA/plugins/cm-neo/design/tml/html/util/select-document.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/util/select-document.tml
@@ -4,81 +4,91 @@
 	_dbkey = $option_dbkey || meta('db', 'dbkey')
 </tml:script>
 
-<div class="select-tree-wrapper">
-	<a href="#" id="select-key-<tml:option name="fieldname"/>" class="form-control">
-		<span class="caret"></span>
-		<span class="title">
-			<tml:if context="[db:{_dbkey}/docid:{tmlform.field($option_fieldname)}]" iscontextvalid="true">
-				<tml:then>
-					<tml:script>
-						var struct = content().getStructEntry();
-						var path=[struct.getStructKey()];
-						for(var parent=struct.getParentEntry(); parent; parent=parent.getParentEntry())
-							path.push(parent.getStructKey().toString());
-					
-						path.push("area-"+struct.getArea().getName());
-						_path = path.reverse().join("/");
-					</tml:script>
-					<tml:path role="none">
-						<tml:meta name="title"/>
-						<tml:between> / </tml:between>
-					</tml:path>
-				</tml:then>
-				<tml:else>
-					<span class="placeholder"><tml:script expression="$option_placeholder || 'Dokument auswählen ...'"/></span>
-				</tml:else>
-			</tml:if>
-		</span>
-				
-	</a>
-	<tml:case condition="tmlform.field($option_fieldname)">
-		<a href="#" class="clear-key-field" id="clear-key-<tml:option name="fieldname"/>" title="Auswahl löschen">&times</a>
-	</tml:case>
-	<div class="select-tree">
-		<div class="tree" id="tree-<tml:option name="fieldname"/>" data-url="<tml:url type="tml" medium="json" layout="siteexplorer" u-dbkey="_dbkey" u_language="{LANGUAGE}"/>"></div>
-	</div>
-</div>
-
-<script>
-	require(["jquery", "jquery-tree"], function($){
-
-		var el = $("#select-key-<tml:option name="fieldname"/>");
-		var field = $("[name='<tml:option name="fieldname"/>']");
-		el.on("focus click", function(ev){
-			ev.preventDefault();
-			tree.show();
-		})
-	
-	
-		$("#clear-key-<tml:option name="fieldname"/>").on("click", function(ev){
-			ev.preventDefault();
-			field.val("");
-			<tml:case hasoptions="changeaction">
-				WGA.ajax.callAction("<tml:option name="changeaction"/>");
+<tml:if condition="tmlform.mode()=='edit'">
+	<tml:then>
+		<div class="select-tree-wrapper">
+			<a href="#" id="select-key-<tml:option name="fieldname"/>" class="form-control">
+				<span class="caret"></span>
+				<span class="title">
+					<tml:if context="[db:{_dbkey}/docid:{tmlform.field($option_fieldname)}]" iscontextvalid="true">
+						<tml:then>
+							<tml:script>
+								var struct = content().getStructEntry();
+								var path=[struct.getStructKey()];
+								for(var parent=struct.getParentEntry(); parent; parent=parent.getParentEntry())
+									path.push(parent.getStructKey().toString());
+							
+								path.push("area-"+struct.getArea().getName());
+								_path = path.reverse().join("/");
+							</tml:script>
+							<tml:path role="none">
+								<tml:meta name="title"/>
+								<tml:between> / </tml:between>
+							</tml:path>
+						</tml:then>
+						<tml:else>
+							<span class="placeholder"><tml:script expression="$option_placeholder || 'Dokument auswählen ...'"/></span>
+						</tml:else>
+					</tml:if>
+				</span>
+						
+			</a>
+			<tml:case condition="tmlform.field($option_fieldname)">
+				<a href="#" class="clear-key-field" id="clear-key-<tml:option name="fieldname"/>" title="Auswahl löschen">&times</a>
 			</tml:case>
-		})
-	
-		var tree = $("#tree-<tml:option name="fieldname"/>").wga_tree({
-			<tml:case condition="_path">
-				path: "<tml:item name="_path"/>"
-			</tml:case>
-		})
-		.on("select", function(ev, node){
-			if(node.id.indexOf("area-")==0)
-				return;		// area selected
-			field.val(node.id)
-			<tml:case hasoptions="changeaction">
-				WGA.ajax.callAction("<tml:option name="changeaction"/>");
-			</tml:case>
-			$(".title", el).html(node.title);
-			tree.hide();
-		})
-
-		$(document).on("focusin click", function(ev){
-			var wrapper = el.parent();
-			if(wrapper.has(ev.target).length==0)
-				tree.hide();
-		})
-	
-	})
-</script>
+			<div class="select-tree">
+				<div class="tree" id="tree-<tml:option name="fieldname"/>" data-url="<tml:url type="tml" medium="json" layout="siteexplorer" u-dbkey="_dbkey" u_language="{LANGUAGE}"/>"></div>
+			</div>
+		</div>
+		
+		<script>
+			require(["jquery", "jquery-tree"], function($){
+		
+				var el = $("#select-key-<tml:option name="fieldname"/>");
+				var field = $("[name='<tml:option name="fieldname"/>']");
+				el.on("focus click", function(ev){
+					ev.preventDefault();
+					tree.show();
+				})
+			
+			
+				$("#clear-key-<tml:option name="fieldname"/>").on("click", function(ev){
+					ev.preventDefault();
+					field.val("");
+					<tml:case hasoptions="changeaction">
+						WGA.ajax.callAction("<tml:option name="changeaction"/>");
+					</tml:case>
+				})
+			
+				var tree = $("#tree-<tml:option name="fieldname"/>").wga_tree({
+					<tml:case condition="_path">
+						path: "<tml:item name="_path"/>"
+					</tml:case>
+				})
+				.on("select", function(ev, node){
+					if(node.id.indexOf("area-")==0)
+						return;		// area selected
+					field.val(node.id)
+					<tml:case hasoptions="changeaction">
+						WGA.ajax.callAction("<tml:option name="changeaction"/>");
+					</tml:case>
+					$(".title", el).html(node.title);
+					tree.hide();
+				})
+		
+				$(document).on("focusin click", function(ev){
+					var wrapper = el.parent();
+					if(wrapper.has(ev.target).length==0)
+						tree.hide();
+				})
+			
+			})
+		</script>
+	</tml:then>
+	<tml:elseif context="[db:{_dbkey}/docid:{tmlform.field($option_fieldname)}]" iscontextvalid="true">
+		<tml:path role="none">
+			<tml:meta name="title"/>
+			<tml:between> / </tml:between>
+		</tml:path>
+	</tml:elseif>
+</tml:if>
