CSS: removed border from toolbar icons

--- a/OpenWGA/plugins/cm-neo/design/scripts/css/header.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/header.scss
@@ -29,7 +29,7 @@
 				padding: 0 5px;
 				.icon {
 					background: #ebebeb;
-					border: solid 1px #337ab7;
+					border: solid 1px transparent;	//#337ab7;
 					color: #337ab7;
 					border-radius: 5px;
 					font-size: 125%;
