--- a/OpenWGA/plugins/cm-neo/design/tml/html/no-content.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/no-content.tml
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
+<tml:script>
+	_structkey=$urlParam_structkey;
+	_lang = $urlParam_lang;
+	if(!_structkey && $urlParam_contentkey){
+		var c = context("db:" + $urlParam_dbkey + "/docid:" + $urlParam_contentkey, false);
+		if(c){
+			_structkey = c.STRUCTKEY;
+			_lang = c.LANGUAGE;
+		}
+	}
+</tml:script>
 <html>
 	<head>
 		<script>
 			WGA={
 				contentinfo:{
 					dbkey: "<tml:item name="$urlParam_dbkey"/>"
-					<tml:case condition="$urlParam_structkey && $urlParam_structkey!='null'">
-						,structkey: "<tml:item name="$urlParam_structkey"/>"
+					<tml:case condition="$urlParam_contentkey && $urlParam_contentkey!='null'">
+						,contentkey: "<tml:item name="$urlParam_contentkey"/>"
 					</tml:case>
-					<tml:case condition="$urlParam_lang">
-						,language: "<tml:item name="$urlParam_lang"/>"
+					<tml:case condition="_structkey">
+						,structkey: "<tml:item name="_structkey"/>"
+					</tml:case>
+					<tml:case condition="_lang">
+						,language: "<tml:item name="_lang"/>"
 					</tml:case>
 				}
 			}
@@ -19,60 +33,27 @@
 	
 	<body style="padding:20px">
 		
-		<tml:if context="[db:{$urlParam_dbkey}/$struct:{$urlParam_structkey}]" iscontextvalid="true">
+		<tml:if context="[db:{$urlParam_dbkey}/$struct:{_structkey}]" iscontextvalid="true">
 			<tml:then>
 			
 				<tml:script>
 					_Struct = AFW.structentry(document);
 				</tml:script>
 			
-				<tml:if condition="_Struct.hasContent($urlParam_lang, false)">
+				<tml:if condition="_Struct.hasContent(_lang, false)">
 					<tml:then>
 						<h1>{%label:no-content.no-reader-title%}</h1>
-						<tml:label key="no-content.no-reader-message" param1="{$urlParam_lang}"/>
+						<tml:label key="no-content.no-reader-message" param1="{_lang}"/>
 					</tml:then>
 					<tml:else>
 						<h1>{%label:no-content.title%}</h1>
-						<tml:label key="no-content.message" param1="{TITLE}" param2="{$urlParam_lang}"/>
+						<tml:label key="no-content.message" param1="{TITLE}" param2="{_lang}"/>
 					</tml:else>
 				</tml:if>
-				
-				<tml:comment><tml:script>
-					// other versions
-					_contentlist = WGA.createList()
-					for(let doc in Iterator(document.getAllContent(document.mayEditPage()))){
-						if(doc.mayEditContent() || doc.getStatus()==doc.STATUS_RELEASE)
-							_contentlist.add(doc);
-					}
-				</tml:script>
-				<tml:case condition="!_contentlist.isEmpty()">
-					<hr>
-					{%label:no-content.other-versions%}:
-					<ul>
-					<tml:foreach item="_contentlist" sortexpression="STATUS+VERSION" sortorder="descending">
-					
-						<tml:groupchange expression="STATUS" id="gc">
-							</ul><h2><tml:label key="{'content-properties.status.'+STATUS}"/></h2><ul>
-						</tml:groupchange>
-					
-						<li>
-							<a href="<tml:script expression="contenturl('html', null, true)"/>">
-								Version <tml:meta name="version"/>						
-								(
-									<tml:case condition="STATUS==content().STATUS_ARCHIVE">
-										<tml:script expression="AFW.Util.dateRange(PUBLISHED, MODIFIED)"/>,
-									</tml:case> 
-									<tml:meta name="languagetitle"/>
-								)								
-							</a>
-						</li>
-					</tml:foreach>
-					</ul>
-				</tml:case></tml:comment>
 			</tml:then>
 			<tml:else>
 				<h1>{%label:no-content-found.title%}</h1>
-				<tml:label key="no-content-found.message" param1="{$urlParam_structkey}"/>
+				<tml:label key="no-content-found.message" param1="{_structkey}"/>
 			</tml:else>
 		</tml:if>
 		
