corrected css for input[type=password]

--- a/OpenWGA/plugins/cm-neo/design/scripts/css/forms.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/forms.scss
@@ -1,5 +1,5 @@
 form{
-	input[type=text].form-control, textarea.form-control, a.form-control{
+	input[type=text].form-control, input[type=password].form-control, textarea.form-control, a.form-control{
 		padding: 6px;
 	}
 
