#00005307: Exception when moving pages in CM-Neo

--- a/OpenWGA/plugins/cm-neo/design/tml/html/content-changed-observer.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/content-changed-observer.tml
@@ -210,7 +210,7 @@
 				struct.setPosition(pos);
 				struct.save();
 				
-				portlet.fireEvent("content-metas-changed");
+				portlet.fireEvent("page-moved")
 				
 			</tml:action>",
 			mode: "norefresh",
