#00005313: Corrected brand-image in CM-Neo when womodo does not run in root context

--- a/OpenWGA/plugins/cm-neo/design/tml/html/toolbar.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/toolbar.tml
@@ -3,8 +3,7 @@
 		
 		<div class="btn-group">
 			<a class="btn button" href="#" data-toggle="dropdown">
-				<tml:comment><span class="icon fas fa-globe"></span></tml:comment>
-				<img class="icon" src="/static/images/brand/icon_32.png">
+				<img class="icon" src="<tml:url type="static" file="images/brand/icon_32.png"/>">
 				<div class="text">
 					Website
 					<span class="caret"></span>
