#00005314: Updated "loading website" animation

--- a/OpenWGA/plugins/cm-neo/design/scripts/css/content.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/content.scss
@@ -37,6 +37,11 @@
 				font-size: 2em;
 				width: 75%;
 				margin: 100px 0;
+				text-align: center;
+				color: gray;
+				.spinner{
+					font-size: 2em;
+				}
 			}
 
 			.sitepanel-wrapper{
