--- a/OpenWGA/plugins/cm-neo/design/scripts/css/styles.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/styles.scss
@@ -14,6 +14,7 @@ $fa-font-path: wga_file_url("fa5", "webfonts");
 @import "type=file /fa5/scss/regular";
 @import "type=file /fa5/scss/icons";
 @import "type=file /fa5/scss/rotated-flipped";
+@import "type=file /fa5/scss/animated";
 
 /* Bootstrap */
 
