--- a/OpenWGA/plugins/cm-neo/design/tml/html/content-changed-observer.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/content-changed-observer.tml
@@ -4,10 +4,12 @@
 	var dbkey = request.getParameter("dbkey")
 	var language = request.getParameter("language")
 
+	console.log(dbkey, contentkey, language, db(dbkey).getDefaultLanguage())
+
 	if(dbkey && (!structkey || structkey=="null")){
 		var event = createevent("content-changed")
 		event.setParameter("dbkey", dbkey)
-		event.setParameter("language", language || db(dbkey).getDefaultLanhguage())
+		event.setParameter("language", language || db(dbkey).getDefaultLanguage())
 		portlet.fireevent(event)
 		return;
 	}
